feat(nav): add nav bar tile class

--- a/app/less/tiles.less
+++ b/app/less/tiles.less
@@ -65,6 +65,14 @@
   color: @tile-text-color;
 }
 
+.tile .tile-label-large {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  font-size: 24px;
+  color: @tile-text-color;
+}
+
 .tile .tile-content .tile-icon-large {
   margin-left: 0px;
   vertical-align: middle !important;
@@ -231,6 +239,12 @@ a.fa-links:hover, a.fa-links:focus {
 .tile.tile-small {
   height: 70px;
   width: 70px;
+}
+
+.tile.tile-navbar {
+  min-width: 0px;
+  min-height: 0px;
+  border: none;
 }
 
 .tile.tile-medium {
