--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -62,8 +62,8 @@
 // -------------------------
 
 // Basics of a navbar
-@navbar-default-bg: @blue;
-@navbar-default-border: @blue;
+@navbar-default-bg: #0a3782;
+@navbar-default-border: @white;
 
 // Navbar links
 @navbar-default-link-color: @white;
