feat(font): add new font for apple devices

--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -43,12 +43,12 @@
 // Typography
 // -------------------------
 
-@font-family-sans-serif: "Segoe UI Light", "Segoe UI", "Segoe WP", "Helvetica Neue", sans-serif;
+@font-family-sans-serif: "Segoe UI Light", "Segoe UI", "Segoe WP", "AppleSDGothicNeo-Light", "Helvetica Neue", sans-serif;
 @font-family-serif: Georgia, "Times New Roman", Times, serif;
 @font-family-monospace: Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base: @font-family-sans-serif;
 
-@headings-font-family: "Segoe UI Light", "Helvetica Neue", "Segoe UI", "Segoe WP", sans-serif;
+@headings-font-family: "Segoe UI Light", "AppleSDGothicNeo-Light ", "Helvetica Neue", "Segoe UI", "Segoe WP", sans-serif;
 @headings-font-weight: 100;
 
 // Components
